P2-3003-Added event time
